# monitoring-stack

./: .gitignore  PRESENTATION.md  README.md  docker-compose.yml
app/goexample/: Dockerfile  go.mod  go.sum
app/goexample/cmd/app/: main.go
app/goexample/pkg/kafkapkg/: kafka.go
app/goexample1/: go.mod  go.sum
app/goexample1/cmd/app/: main.go
app/goexample1/pkg/kafkapkg/: kafka.go
app/rustexample/: Cargo.toml  Dockerfile
app/rustexample/src/: main.rs
config/grafana/: dashboard.json  datasources.yml  multi-datasource-dashboard.json  service-dashboard.json
config/kafka/: kafka-variables.env
config/prometheus/: prometheus.yml
config/promtail/: promtail.yaml
config/tempo/: tempo.yaml
